--- a/LVL2/Task2/TributePage.html
+++ b/LVL2/Task2/TributePage.html
@@ -17,7 +17,7 @@
                 heart and dreams! </p>
         </div>
         <aside>
-            <img id="no-bg" src="./luffy-nobg.png" height="269px" width="200px" />
+            <img id="no-bg" class='img' src="./luffy-nobg.png" />
         </aside>
     </header>
     <main id="main">
